src/LambdaInterpreter/Grammar/Grammar.tex
\documentclass[12pt]{article}

\usepackage[utf8]{inputenc}
\usepackage[T2A]{fontenc}

\usepackage{parskip}
\usepackage{amsmath}
\usepackage{amssymb}

\begin{document}

<program> ::= <expression> <program> | ""

<expression> ::= <expression\_opt> <line\_end>

<expression\_opt> ::= <definition> | <term> | ""

<definition> ::= <declaration> <whitespace> "=" <whitespace> <term>

<declaration> ::= "let" <whitespace> <variable>

<term> ::= <application> | <abstraction>

<application> ::= <operand> <application\_opt>

<application\_opt> ::= <application\_opt'> | <application\_opt''> | ""

<application\_opt'> ::= <whitespace> <operand> <application\_opt>

<application\_opt''> ::= <whitespace> <abstraction>

<abstraction> ::= "$\backslash$" <variables> "." <term>

<operand> ::= <variable> | <term\_par>

<term\_par> ::= "(" <whitespace\_opt> <term> <whitespace\_opt> ")"

<variables> ::= <variable> <variables\_opt>

<variables\_opt> ::= <whitespace> <variable> <variables\_opt> | ""

<variable> ::= <letter> <variable\_opt>

<variable\_opt> ::= <symbol> <variable\_opt> | ""

<symbol> ::= <letter> | <digit> | "\_"

<whitespace> ::= " " <whitespace\_opt>

<whitespace\_opt> ::= " " <whitespace\_opt> | ""

<line\_end> ::= <whitespace\_opt> ("$\backslash$n" | "$\backslash$0")

\end{document}
